# Dist-GNN

./: .gitignore  CMakeLists.txt  README.md  install.sh
example/: test_sampler.py
example/graphsage/: README.md  cache_value.py  node_classification.py  node_classification_dist.py  test_cache_value.py
example/graphsage/utils/: models.py
python/: setup.py
python/DistGNN/: __init__.py
python/DistGNN/cache/: __init__.py  cache_value.py
python/DistGNN/dataloading/: __init__.py  dataloader.py  dataset_preprocess.py  load_dataset.py
scripts/: bandwidth.py  feature_read_bytes.py  ncu_feature.py  ncu_sampling.py  sampling_read_bytes.py
src/: pybind.cc
src/cache/: tensor_p2p_cache.cc  tensor_p2p_cache.h
src/cache/cuda/: ops.h  preprocess_heat.cu
src/common/: cuda_context.h  dgs_headers.h  pin_memory.cc  pin_memory.h  shared_mem.cc  shared_mem.h
src/common/cuda/: atomic.h  cub_function.h
src/context/: context.cc  context.h
src/feature/: feature_server.cc  feature_sever.h
src/feature/cuda/: feature.cu  feature_ops.cu  ops.h
src/hashmap/cuda/: gpu_hash_table.cuh  hashmap.cu  hashmap.h  ops.h  slab_alloc.cuh  slab_hash.cuh  slab_hash_global.cuh
src/hashmap/cuda/concurrent_map/: cmap_class.cuh  cmap_implementation.cuh
src/hashmap/cuda/concurrent_map/device/: build.cuh  concurrent_kernel.cuh  count_kernel.cuh  delete_kernel.cuh  misc_kernels.cuh  search_kernel.cuh
src/hashmap/cuda/concurrent_map/warp/: count.cuh  delete.cuh  insert.cuh  search.cuh
src/nccl/: nccl_context.cc  nccl_context.h  nccl_ops.cc  nccl_ops.h
src/sampling/: sampler.cc  sampler.h
src/sampling/cuda/: ops.h  rowwise_sampling.cu  rowwise_sampling_bias.cu  rowwise_sampling_bias_p2p.cu  rowwise_sampling_p2p.cu  tensor_relabel.cu  utils.cu
src/sampling/cuda/warpselect/: MergeNetworkWarp.cuh  Pair.cuh  Reductions.cuh  Utils.cuh  WarpSelect.cuh
tests/: test_build_sampler.py  test_extract.py  test_feature_server.py  test_nccl.py  test_p2p_server.py  test_random_engine.py  test_sampler.py  test_sampler_bias.py  test_sampler_uniform.py  test_shared_tensor.py  test_shared_tensor_mmap.py
